# raspberrypi-amedas

./: .gitignore  Dockerfile  LICENSE  RASPI3APLUS.md  README.md  compose.yaml  pyproject.toml
docs/: .buildinfo  README.md  conf.py  genindex.html  how_to_create.md  index.html  libs.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  libs.doctree  modules.doctree
docs/_build/doctrees/: environment.pickle  index.doctree  libs.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  libs.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/libs/: node.html  sensor.html
docs/_build/html/_sources/: index.rst.txt
docs/_modules/: index.html
docs/_modules/libs/: node.html  sensor.html
docs/_sources/: index.rst.txt
docs_src/: README.md  conf.py  libs.rst
src/amedas/: main.py
src/amedas/libs/: __init__.py  node.py  sensor.py
src/amedas/routers/: node.py  sensor.py
src/amedas/schemas/: node.py  sensor.py
